--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,8 +114,9 @@ configure_file (
 # Si vous utilisez plusieurs fichiers, en plus de ensishell.c, pour votre
 # shell il faut les ajouter ici
 ##
-add_executable(ensishell src/readcmd.c src/ensishell.c)
+add_executable(ensishell src/readcmd.c src/ensishell.c src/fonctions.c)
 target_link_libraries(ensishell ${READLINE_LDFLAGS} ${GUILE_LDFLAGS})
+
 
 ##
 # Programme de test
